wrote html of 2nd banner

--- a/index.html
+++ b/index.html
@@ -7,5 +7,46 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="./AppLab/01. Freebie/company-logo-list-1.png" alt="">
+      <ul>
+        <li>Home</li>
+        <li>Key Features</li>
+        <li>Pricing</li>
+        <li>Testimonial</li>
+        <li>FAQ</li>
+      </ul>
+      <button>Try For Free</button>
+    </header>
+    <section>
+      <div>
+        <p>#1 Editor's choice app of 2020</p>
+        <h1>Best app for your  modern lifestyle</h1>
+        <p>Increase productivity with a simple to-do app. app for managing your personal budgets.</p>
+        <button>Try For Free</button>
+        <button>Watch demo video</button>
+      </div>
+      <div>
+        <p>Trusted by companies like</p>
+        <img src="AppLab/01. Freebie/company-logo-list-1.png" alt="">
+        <img src="AppLab/01. Freebie/company-logo-list-2.png" alt="">
+        <img src="AppLab/01. Freebie/company-logo-list-3.png" alt="">
+        <img src="AppLab/01. Freebie/company-logo-list-4.png" alt="">
+        <img src="AppLab/01. Freebie/company-logo-list-5.png" alt="">
+      </div>
+      <div>
+        <img src="AppLab/01. Freebie/2nd banner left image background.png" alt="">
+      </div>
+      <div>
+        <h1>Awesome apps Features</h1>
+        <p>Increase productivity with a simple to-do app. app for managing your personal budgets. </p>
+        <img src="AppLab/01. Freebie/group-logo-text-feature-1-clock.png" alt="">
+        <h3>Fast Performance</h3>
+        <p>Get your blood tests delivered at home collect a sample from </p>
+        <img src="AppLab/01. Freebie/group-logo-text-feature-2-prototyping.png" alt="">
+        <img src="AppLab/01. Freebie/group-logo-text-feature-3-vectoredit.png" alt="">
+      </div>
+    </section>
+  </body>
 </html>
